removed some stuff added some other stuff :\

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <h1 class="white">Pierfrancesco Soffritti</h1>
-                                <h3 class="white">Welcome!</h3>
-                                <h5 class="white">this site is currently hosted on GitHub.. because i'm poor :'(</h5>
+                                <h5 class="white">this website is currently hosted on GitHub.. because I'm poor :'(</h5>
                                 <a class="page-scroll btn btn-default" href="#about" role="button">Continue</a>
                             </div>
                         </div>
@@ -116,7 +115,7 @@
                         <div class="about text-center">
                             <p class="white lead">
                             	<br/>
-                            	Italian dev/Android dev in love with UI/UX design and graphics in general.
+                            	I'm an Italian Software Egineer, interested in good software development, UI/UX design, Android development, web development, game development and computer graphics :D
                             </p>
                             <a class="page-scroll btn btn-white" href="#my-work">My Work</a>
                         </div>
@@ -147,15 +146,15 @@
                         </a>
                     </div>
 
-
                     <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
-                        <a href="#" class="portfolio-box portfolio-3" data-toggle="modal" data-target=".portfolioModal3">
+                        <a href="#" class="portfolio-box portfolio-8" data-toggle="modal" data-target=".portfolioModal8">
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
-                                <h4 class="white">SecurConfort.it</h4>
+                                <h4 class="white">RemoteVR</h4>
                             </div>
                         </a>
                     </div>
+
                     <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
                         <a href="#" class="portfolio-box portfolio-4" data-toggle="modal" data-target=".portfolioModal4">
                             <div class="portfolio-box-spacer"></div>
@@ -169,15 +168,6 @@
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
                                 <h4 class="white">Terrain Generator</h4>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
-                        <a href="#" class="portfolio-box portfolio-8" data-toggle="modal" data-target=".portfolioModal8">
-                            <div class="portfolio-box-spacer"></div>
-                            <div class="portfolio-box-caption">
-                                <h4 class="white">RemoteVR</h4>
                             </div>
                         </a>
                     </div>
@@ -205,6 +195,24 @@
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
                                 <h4 class="white">SoUNds</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-11" data-toggle="modal" data-target=".portfolioModal11">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">Broken Mantra</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-12" data-toggle="modal" data-target=".portfolioModal12">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">Collatz Conjecture Visualization</h4>
                             </div>
                         </a>
                     </div>
@@ -270,10 +278,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>Shuffly</h2>
-                        Thanks to its pseudo-random algorithms, Shuffly is <b>the best place</b> to <b>discover new content on YouTube</b> or just to <b>chill and spend some time</b>.<br/>
-                        <b>Shuffly is not a replacement for the YouTube app</b>, they serve different purposes.<br/>
-                        Sometimes YouTube can be a little overwhelming, Shuffly's minimal and straightforward design is thought to solve this problem.
-                        <br/><br/>
+                        <p>Thanks to its pseudo-random algorithms, Shuffly is the best place to <b>discover new content on YouTube</b> or just to chill and spend some time.</p>
+                        <p><b>Shuffly is not a replacement for the YouTube app</b>, they serve different purposes.</p>
+                        <p>Shuffly transforms YouTube in something similar to the old concept of television, where the user is able to choose the channel, but not exactly what he's going to see.</p>
 
 						<ul class="list-inline item-details">
                             <li>
@@ -303,13 +310,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>One Calculator</h2>
-                        <p>The development of this app has started during my first Java course at the university. I wanted to improve my coding skills and learn to code on Android, which has always fascinated me.
-                        <br/>At first I never intended to release it. The code is all but well written, at the time i wasn't familiar with a lot of basic programming practices.
-                        <br/>Developing this app has been super fun and instructive. Also I used my own calculator for all the engineering exams is had to do :)
-
-                        <br/><br/>At the moment OneCalculator has more than 100.000 downloads from the store, with a pretty good rating of 4.5/5 and I also earned some money from it.</p>
-
-                        <br/>
+                        <p>One Calculator is the only calculator app you need on your Android device :)</p>
+                        <p>The app is capable of solving common calculations, matrix calculations, conversions between units of measurement and number bases and of drawing graphs of functions</p>
+                        <p>One Calculator has been quite successful on the PlayStore and now has more than 100.000 downloads and a rating of 4.6/5</p>
 
                         <a href="https://play.google.com/store/apps/details?id=it.onecalculator" target="_blank">
 						  <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
@@ -317,29 +320,6 @@
 
 						<br/>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="portfolio-modal modal fade portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="row">
-                <div class="modal-head">
-                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div class="modal-body">
-                        <h2>SecurConfort.it</h2>
-                        <p>A website I built for my father's business using <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.</p>
-                        <ul class="list-inline item-details">
-                            <li>
-                                <strong><a href="http://www.securconfort.it/newsite/index.html" target="_blank">SecurConfort.it</a>
-                                </strong>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -355,9 +335,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>HeightMap Generator</h2>
-                        <p>A Java heightmap generator based on Perlin Noise and Simplex Noise. It can send data through web socket to a javascript application in order to generate the 3D model of the heightmap. This may not be the most efficient way to send data, but has been useful to play with websockets :)
-                        <br/><br/>
-                        The maps can be rendered and moved in real time (should be improved) and with different visual effects.</p>
+                        <p>A Java heightmap generator based on Perlin Noise and Simplex Noise.</p>
+                        <p>The app can send data through web socket to a javascript application that is capable of generating the 3D model of the heightmap.</p>
+                        <p>The maps can be rendered and moved in real time and with different visual effects.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/HeightMapGenerator" target="_blank">GitHub</a>
@@ -387,7 +367,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>Terrain Generator</h2>
-                        <p>A javascript terrain generator based on Perlin Noise and <a href="http://threejs.org/" target="_blank">three.js</a>.<br/>Heightmaps can be generated inside the web app or taken from an external source, through web socket.</p>
+                        <p>A rudimental javascript terrain generator based on Perlin Noise and Three.js.</p>
+                        <p>Heightmaps can be generated inside the web app or taken from an external source, through web socket.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/TerrainGenerator" target="_blank">GitHub</a>
@@ -435,7 +416,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>HTML5 canvas music player</h2>
-                        <p>Fun project done in an evening, in order to do some practise with JavaScript and to explore some interesting technologies  (HTML5 canvas + Web Audio API).<br/>It's not very well built, it may not work with safari and maybe other browsers D: use it with Chrome :)
+                        <p>Fun project done in an evening, in order to do some practise with JavaScript and to explore some interesting technologies  (HTML5 canvas + Web Audio API).<br/>It's not very well built, it may not work with Safari and maybe other browsers D: use it with Chrome :)
                         </p>
                         <ul class="list-inline item-details">
                             <li>
@@ -458,10 +439,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>RemoteVR </h2>
-                        <p>
-                        The RemoteVR project is a simple attempt to platform/hardware independent multiplayer Virtual Reality.
-The concept is: run the VR application in the server, use the client to connect to the server, interact with the VR application in streaming. With this approach is easy to have more than one person in the same virtual space. Also, those persons can use different devices and OS to access the same VR experience.
-                        </p>
+                        <p>The RemoteVR project is a simple attempt to obtain <b>platform/hardware independent multiplayer Virtual Reality</b>.</p>
+                        <p>The gist of the idea is to run the VR application on a server and then connect many clients to it, allowing them to interact with the VR application in streaming.</p>
+                        <p>Using this approach is easy to have more than one person in the same virtual environment. Also, those people can use different devices and OS to access the same VR experience.</p>
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://github.com/PierfrancescoSoffritti/RemoteVR_UnityServer" target="_blank">UnityServer</a>
@@ -488,7 +468,7 @@ The concept is: run the VR application in the server, use the client to connect 
                     <div class="modal-body">
                         <h2>NeonCrystal</h2>
                         <p>
-                        Playing around with three.js
+                        Playing around with Three.js
                         </p>
                         <ul class="list-inline item-details">
                             <li>
@@ -517,6 +497,54 @@ The concept is: run the VR application in the server, use the client to connect 
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/4.%20SoUNds/index.html" target="_blank">Try it out</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade portfolioModal11" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Broken Mantra</h2>
+                        <p>
+                        Three.js demo-ish thing.
+                        </p>
+                        <ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/10.%20BrokenMantra/index.html" target="_blank">Try it out</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <div class="portfolio-modal modal fade portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Collatz Conjecture Visualization</h2>
+                        <p>
+                        Collatz Conjecture visualization on the HTML5 canvas.
+                        </p>
+                        <ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/12.%20Collatz%20Conjecture/index.html" target="_blank">Try it out</a>
                                 </strong>
                             </li>
                         </ul>
