fontawesome new version + medium link

--- a/index.html
+++ b/index.html
@@ -241,21 +241,24 @@
             </div>
             <div class="social">
                     <div class="follow-us">
-                      <a href="https://www.facebook.com/pierfrancesco.soffritti" class="" target="_blank">
-                          <i class="fa fa-facebook"></i>
-                      </a>
-                      <a href="https://plus.google.com/u/0/+PierfrancescoSoffritti2/" class="" target="_blank">
-                          <i class="fa fa-google-plus"></i>
-                      </a>
-                      <a href="https://instagram.com/pierfrancesco.soffritti/" class="" target="_blank">
-                          <i class="fa fa-instagram"></i>
-                      </a>
-                      <a href="https://github.com/PierfrancescoSoffritti" class="" target="_blank">
-                          <i class="fa fa-github"></i>
-                      </a>                              
-                      <a href="http://stackoverflow.com/users/4306449/pierfrancesco-soffritti?tab=profile" class="" target="_blank">
-                          <i class="fa fa-stack-overflow"></i>
-                      </a>       
+                        <a href="https://instagram.com/pierfrancesco.soffritti/" class="" target="_blank">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                        <a href="https://www.facebook.com/pierfrancesco.soffritti" class="" target="_blank">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                        <a href="https://plus.google.com/u/0/+PierfrancescoSoffritti2/" class="" target="_blank">
+                            <i class="fa fa-google-plus"></i>
+                        </a>
+                        <a href="https://github.com/PierfrancescoSoffritti" class="" target="_blank">
+                            <i class="fa fa-github"></i>
+                        </a>    
+                        <a href="https://medium.com/@soffritti.pierfrancesco" class="" target="_blank">
+                            <i class="fa fa-medium"></i>
+                        </a>                           
+                        <a href="http://stackoverflow.com/users/4306449/pierfrancesco-soffritti?tab=profile" class="" target="_blank">
+                            <i class="fa fa-stack-overflow"></i>
+                        </a>    
                   </div>
             </div>
 
