social on header

--- a/index.html
+++ b/index.html
@@ -92,6 +92,27 @@
                             <div class="col-md-12 text-center">
                                 <h1 class="white">Pierfrancesco Soffritti</h1>
                                 <h5 class="white">this website is currently hosted on GitHub.. because I'm poor :'(</h5>
+
+                                <div class="social">
+                                	<div class="follow-us">
+                                		<a href="https://instagram.com/pierfrancesco.soffritti/" class="" target="_blank">
+                                			<i class="fa fa-instagram"></i>
+                                		</a>
+				                        <a href="https://plus.google.com/u/0/+PierfrancescoSoffritti2/" class="" target="_blank">
+				                            <i class="fa fa-google-plus"></i>
+				                        </a>
+				                        <a href="https://github.com/PierfrancescoSoffritti" class="" target="_blank">
+				                            <i class="fa fa-github"></i>
+				                        </a>    
+				                        <a href="https://medium.com/@soffritti.pierfrancesco" class="" target="_blank">
+				                            <i class="fa fa-medium"></i>
+				                        </a>                           
+				                        <a href="http://stackoverflow.com/users/4306449/pierfrancesco-soffritti?tab=profile" class="" target="_blank">
+				                            <i class="fa fa-stack-overflow"></i>
+				                        </a>    
+				                  	</div>
+				            	</div>
+
                                 <a class="page-scroll btn btn-default" href="#about" role="button">Continue</a>
                             </div>
                         </div>
