--- a/index.html
+++ b/index.html
@@ -590,6 +590,18 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/adonis.min.js"></script>
 
+    <!-- analytics -->
+    <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-50551684-4', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+
 </body>
 
 </html>
