--- a/index.html
+++ b/index.html
@@ -98,18 +98,16 @@
                                 		<a href="https://instagram.com/pierfrancesco.soffritti/" class="" target="_blank">
                                 			<i class="fa fa-instagram"></i>
                                 		</a>
-				                        <a href="https://plus.google.com/u/0/+PierfrancescoSoffritti2/" class="" target="_blank">
-				                            <i class="fa fa-google-plus"></i>
-				                        </a>
 				                        <a href="https://github.com/PierfrancescoSoffritti" class="" target="_blank">
 				                            <i class="fa fa-github"></i>
 				                        </a>    
 				                        <a href="https://medium.com/@soffritti.pierfrancesco" class="" target="_blank">
 				                            <i class="fa fa-medium"></i>
 				                        </a>                           
-				                        <a href="http://stackoverflow.com/users/4306449/pierfrancesco-soffritti?tab=profile" class="" target="_blank">
-				                            <i class="fa fa-stack-overflow"></i>
-				                        </a>    
+				                        <a href="https://www.linkedin.com/in/pierfrancescosoffritti/en" class="" target="_blank">
+				                            <i class="fa fa-linkedin"></i>
+				                        </a>
+
 				                  	</div>
 				            	</div>
 
@@ -276,7 +274,10 @@
                         </a>    
                         <a href="https://medium.com/@soffritti.pierfrancesco" class="" target="_blank">
                             <i class="fa fa-medium"></i>
-                        </a>                           
+                        </a>
+                        <a href="https://www.linkedin.com/in/pierfrancescosoffritti/en" class="" target="_blank">
+                            <i class="fa fa-linkedin"></i>
+                        </a>                   
                         <a href="http://stackoverflow.com/users/4306449/pierfrancesco-soffritti?tab=profile" class="" target="_blank">
                             <i class="fa fa-stack-overflow"></i>
                         </a>    
