--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                         </p>
                         <ul class="list-inline item-details">
                             <li>
-                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/WTPlayer/index.html" target="_blank">WTPlayer</a>
+                                <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/3.%20WTPlayer/index.html" target="_blank">WTPlayer</a>
                                 </strong>
                             </li>
                         </ul>
