--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
                     </div>
 
                     <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-13" data-toggle="modal" data-target=".portfolioModal13">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">Nowherelands</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-3 col-xs-12 center-block">
                         <a href="#" class="portfolio-box portfolio-6" data-toggle="modal" data-target=".portfolioModal6">
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
@@ -555,7 +564,7 @@
         </div>
     </div>
 
-     <div class="portfolio-modal modal fade portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="row">
                 <div class="modal-head">
@@ -570,6 +579,30 @@
                         <ul class="list-inline item-details">
                             <li>
                                 <strong><a href="https://rawgit.com/PierfrancescoSoffritti/Doodling/master/12.%20Collatz%20Conjecture/index.html" target="_blank">Try it out</a>
+                                </strong>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade portfolioModal13" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Nowherelands</h2>
+                        <p>
+                        A WebGL experiment I've built for the 2017 edition of the Digital Design Days, showcased <a href="http://devx.ddd.it/en/" target="_blank">here</a> with many others.<br/>
+                        </p>
+                        <ul class="list-inline item-details">
+                            <li>
+                                <strong><a href="https://pierfrancescosoffritti.github.io/Nowherelands/" target="_blank">Try it out</a>
                                 </strong>
                             </li>
                         </ul>
