--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <header>
             <!--<div class="header-background"></div>-->
-            <iframe class="header-background" src="header.html"></iframe>
+            <iframe class="header-background" src="header.html" frameBorder="0"></iframe>
             <div class="header-overlay"></div>
             <div class="container">
                 <div class="table">
@@ -156,11 +156,21 @@
                             <div class="portfolio-box-caption"><h4 class="white">Shuffly</h4></div>
                         </a>
                     </div>
+
                     <div class="col-lg-6 col-sm-6 col-xs-12 center-block">
                         <a href="#" class="portfolio-box portfolio-2" data-toggle="modal" data-target=".portfolioModal2">
                             <div class="portfolio-box-spacer"></div>
                             <div class="portfolio-box-caption">
                                 <h4 class="white">One Calculator</h4>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-6 col-sm-6 col-xs-12 center-block">
+                        <a href="#" class="portfolio-box portfolio-14" data-toggle="modal" data-target=".portfolioModal14">
+                            <div class="portfolio-box-spacer"></div>
+                            <div class="portfolio-box-caption">
+                                <h4 class="white">MicroMega</h4>
                             </div>
                         </a>
                     </div>
@@ -354,6 +364,24 @@
 
 						<br/>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade portfolioModal14" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="row">
+                <div class="modal-head">
+                    <button type="button" class="btn btn-default btn-close-modal" data-dismiss="modal"><i class="fa fa-chevron-left"></i></button>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>MicroMega</h2>
+                        <p>A music player I've built for the italian artist Ottodix (Alessandro Zannier). The player is used to showcase his latest music album and all his artworks.</p>
+
+                        <a href="https://micromegaproject.com/" target="_blank">micromegaproject.com</a>
                     </div>
                 </div>
             </div>
