--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                         <h2>MicroMega</h2>
                         <p>A music player I've built for the italian artist Ottodix (Alessandro Zannier). The player is used to showcase his latest music album and all his artworks.</p>
 
-                        <a href="https://micromegaproject.com/" target="_blank">micromegaproject.com</a>
+                        <b><a href="https://micromegaproject.com/" target="_blank">micromegaproject.com</a></b>
                     </div>
                 </div>
             </div>
