linked blog posts

--- a/index.html
+++ b/index.html
@@ -630,7 +630,16 @@
                         </p>
                         <ul class="list-inline item-details">
                             <li>
-                                <strong><a href="https://pierfrancescosoffritti.github.io/Nowherelands/" target="_blank">Try it out</a>
+                                <strong><a href="https://pierfrancescosoffritti.github.io/Nowherelands/" target="_blank">Click here to try it out</a>
+                                </strong>
+                            </li>
+                            <br/>
+                            <li>
+                                <strong><a href="https://medium.com/@soffritti.pierfrancesco/sound-generation-with-javascript-57b2fda65608" target="_blank">Sound generation with Javascript</a>
+                                </strong>
+                            </li>
+                            <li>
+                                <strong><a href="https://medium.com/@soffritti.pierfrancesco/dynamic-reflections-in-three-js-2d46f3378fc4" target="_blank">Dynamic reflections in Three.js</a>
                                 </strong>
                             </li>
                         </ul>
