--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script src="https://use.fontawesome.com/188d405acc.js"></script>
 </html>
