added metadata for socials

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="theme-color" content="#000000">
 
+        <!-- social stuff -->
+
+        <meta property="og:title" content="Pierfrancesco Soffritti">
+		<meta property="og:description" content="Personal website and portfolio.">
+		<meta property="og:image" content="%PUBLIC_URL%/favicon.png">
+		<meta property="og:url" content="https://pierfrancescosoffritti.com/">
+		<meta name="twitter:card" content="summary">
+
+        <!--  Non-Essential, But Recommended -->
+
+		<meta property="og:site_name" content="Pierfrancesco Soffritti">
+        <meta name="twitter:image:alt" content="Pierfrancesco Soffritti">
+        <!-- social stuff -->
+
         <!--
         manifest.json provides metadata used when your web app is added to the
         homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
