updated pic for socials

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
         <meta property="og:title" content="Pierfrancesco Soffritti">
 		<meta property="og:description" content="Personal website and portfolio.">
-		<meta property="og:image" content="%PUBLIC_URL%/favicon.png">
+		<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/personal-website-5dadd.appspot.com/o/favicon.png?alt=media&token=4f064031-cfb1-499b-9d03-24fc0255b0f4">
 		<meta property="og:url" content="https://pierfrancescosoffritti.com/">
 		<meta name="twitter:card" content="summary">
 
