small seo optimizations

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+
+        <meta name="description" content="Personal website and portfolio.">
+        <meta name="keywords" content="Pierfrancesco, Soffritti, pierfrancescosoffritti, personal website, portfolio, OneCalculator, Shuffly">
+        <meta name="author" content="Pierfrancesco Soffritti">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="theme-color" content="#000000">
 
