--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
         <meta name="keywords" content="Pierfrancesco, Soffritti, pierfrancescosoffritti, personal website, portfolio, OneCalculator, Shuffly">
         <meta name="author" content="Pierfrancesco Soffritti">
 
+        <meta name="google-site-verification" content="QYxU4tPWRqYfP-gS2PBU0Uoqw9JXqOnotw9c8uoKg8k" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="theme-color" content="#000000">
 
