bug fix + structured data

--- a/public/index.html
+++ b/public/index.html
@@ -54,4 +54,22 @@
     </body>
 
     <script src="https://use.fontawesome.com/188d405acc.js"></script>
+
+    <!-- structured data -->
+
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Person",
+          "name": "Pierfrancesco Soffritti",
+          "url": "https://pierfrancescosoffritti.com/",
+          "sameAs": [
+            "https://www.facebook.com/pierfrancesco.soffritti",
+            "https://instagram.com/pierfrancesco.soffritti/",
+            "https://www.linkedin.com/in/pierfrancescosoffritti/",
+            "https://plus.google.com/u/0/+PierfrancescoSoffritti2/"
+          ]
+        }
+    </script>
+    
 </html>
