--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,8 @@
         <div id="root"></div>
     </body>
 
-    <script src="https://use.fontawesome.com/188d405acc.js"></script>
+    <!-- <script src="https://use.fontawesome.com/188d405acc.js"></script> -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
     <!-- structured data -->
 
